--- a/cft/df/df_zipper.yaml
+++ b/cft/df/df_zipper.yaml
@@ -14,7 +14,7 @@ Parameters:
     Type: String
     Default: df-fmwrk-code-us-east-2
 Resources:
-  Zipper:
+  dfZipper:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName: zipper
@@ -102,11 +102,11 @@ Resources:
               env = os.environ['env']
               target_key = f"{env}/aws-datalake-framework-api/zip-files"
               dl_dict = {
-                  "aws-dl-fmwrk-data-asset-api": f"{env}/aws-datalake-framework-api/lambda/aws-df-fmwrk-data-asset-api/",
-                  "aws-dl-fmwrk-data-asset-catalogs-api": f"{env}/aws-datalake-framework-api/lambda/aws-df-fmwrk-data-asset-catalogs-api/",
-                  "aws-dl-fmwrk-source-system-api": f"{env}/aws-datalake-framework-api/lambda/aws-df-fmwrk-source-system-api/",
-                  "aws-dl-fmwrk-target-system-api": f"{env}/aws-datalake-framework-api/lambda/aws-df-fmwrk-target-system-api/",
-                  "aws-dl-fmwrk-data-asset-info-api": f"{env}/aws-datalake-framework-api/lambda/aws-df-fmwrk-data-asset-info-api/"
+                  "aws-df-fmwrk-data-asset-api": f"{env}/aws-datafabric-framework-api/lambda/aws-dl-fmwrk-data-asset-api/",
+                  "aws-df-fmwrk-data-asset-catalogs-api": f"{env}/aws-datafabric-framework-api/lambda/aws-dl-fmwrk-data-asset-catalogs-api/",
+                  "aws-df-fmwrk-source-system-api": f"{env}/aws-datafabric-framework-api/lambda/aws-dl-fmwrk-source-system-api/",
+                  "aws-df-fmwrk-target-system-api": f"{env}/aws-datafabric-framework-api/lambda/aws-dl-fmwrk-target-system-api/",
+                  "aws-df-fmwrk-data-asset-info-api": f"{env}/aws-datafabric-framework-api/lambda/aws-dl-fmwrk-data-asset-info-api/"
               }
               body = {"status": 200, "uploaded_files": []}
               for obj in dl_dict:
@@ -132,8 +132,8 @@ Resources:
               else:
                 cfnresponse.send(event, context, cfnresponse.FAILED, body, "CustomResourcePhysicalID")
 
-  ZipperInvoke:
+  dfZipperInvoke:
     Type: AWS::CloudFormation::CustomResource
     Version: "1.0"
     Properties:
-      ServiceToken: !GetAtt Zipper.Arn
+      ServiceToken: !GetAtt dfZipper.Arn
