--- a/cft/df/df_api_deployment.yaml
+++ b/cft/df/df_api_deployment.yaml
@@ -15,7 +15,7 @@ Parameters:
     Default: df-fmwrk-code-us-east-2
   CodeBucketPath:
     Type: String
-    Default: aws-datafabric-framework-api/zip-files
+    Default: aws-datalake-framework-api/zip-files
 
 Resources:
   DataAssetAPI:
@@ -140,9 +140,9 @@ Resources:
         - x86_64
       Content:
         S3Bucket: !Ref CodeBucket
-        S3Key: !Sub "${Environment}/aws-datalake-framework-api/dependencies/pg_connect.zip"
+        S3Key: !Sub "${Environment}/aws-datafabric-framework-api/dependencies/python.zip"
       Description: Layer to connect to database
-      LayerName: pg_connect_test
+      LayerName: df_lambda_layer
 Outputs:
   LambdaDeployment:
     Description: Latest Commit to be updated here
